[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/Pause_Menu.gd" type="Script" id=1]

[node name="Pause_Menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -46.0
margin_bottom = 46.0

[node name="Back" type="Button" parent="Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
text = "Back"
flat = true

[node name="Save_Game" type="Button" parent="Control/VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 44.0
text = "SaveGame"
flat = true

[node name="Home" type="Button" parent="Control/VBoxContainer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 68.0
text = "Home"
flat = true

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 92.0
text = "Quit"
flat = true

[connection signal="pressed" from="Control/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Save_Game" to="." method="_on_Save_Game_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
